# flappy_ball

./: .gitmodules  CMakeLists.txt  README.md  taskfile.yml
src/: Bird.cpp  Bird.h  Game.cpp  Game.h  Pipe.cpp  Pipe.h
